push for products ids

--- a/Python_notebooks/satellite_data_download.ipynb
+++ b/Python_notebooks/satellite_data_download.ipynb
@@ -82,13 +82,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_to_extract = 'cmems_obs-oc_atl_bgc-plankton_nrt_l3-multi-1km_P1D' # for chla\n",
+    "#dataset_to_extract = 'cmems_obs-oc_atl_bgc-plankton_nrt_l3-multi-1km_P1D' # for chla\n",
     "\n",
-    "#dataset_to_extract = 'cmems_obs-oc_atl_bgc-optic_nrt_l3-multi-1km_P1D' # for bbp"
+    "#dataset_to_extract = 'cmems_obs-oc_atl_bgc-optic_nrt_l3-multi-1km_P1D' # for bbp\n",
+    "\n",
+    "dataset_to_extract = 'cmems_obs-sl_eur_phy-ssh_nrt_allsat-l4-duacs-0.125deg_P1D' #for current"
    ]
   },
   {
@@ -100,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,75 +124,77 @@
     "min_depth = 0 # Primarily interested in surface values only. Will flag if outside of range of product\n",
     "max_depth = 1\n",
     "\n",
-    "min_lon = -25 # Same lat/lons from autonomy visualisation, can be freely changed\n",
-    "max_lon = -10\n",
+    "min_lon = -35\n",
+    "max_lon = -5\n",
     "min_lat = 55\n",
-    "max_lat = 65\n",
+    "max_lat = 66\n",
     "\n",
-    "saved_netCDF_as = \"CMEMS_Iceland_Basin_CHLA_April-May2024.nc\" # This changes the name of the output file."
+    "saved_netCDF_as = \"CMEMS_Iceland_Basin_SSH_April-May2024.nc\" # This changes the name of the output file."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO - 2024-05-17T14:50:50Z - Dataset version was not specified, the latest one was selected: \"202311\"\n",
-      "INFO - 2024-05-17T14:50:50Z - Dataset part was not specified, the first one was selected: \"default\"\n",
-      "INFO - 2024-05-17T14:50:57Z - Service was not specified, the default one was selected: \"arco-time-series\"\n",
-      "WARNING - 2024-05-17T14:51:02Z - Some or all of your subset selection [2024-04-20 00:00:00, 2024-05-17 15:50:46] for the time dimension  exceed the dataset coordinates [2024-04-27 23:00:00, 2024-05-16 00:00:00]\n",
-      "INFO - 2024-05-17T14:51:02Z - Downloading using service arco-time-series...\n",
-      "INFO - 2024-05-17T14:51:09Z - <xarray.Dataset> Size: 3GB\n",
-      "Dimensions:              (time: 19, latitude: 960, longitude: 1440)\n",
+      "INFO - 2024-05-20T09:38:19Z - Dataset version was not specified, the latest one was selected: \"202311\"\n",
+      "INFO - 2024-05-20T09:38:19Z - Dataset part was not specified, the first one was selected: \"default\"\n",
+      "INFO - 2024-05-20T09:38:23Z - Service was not specified, the default one was selected: \"arco-geo-series\"\n",
+      "WARNING - 2024-05-20T09:38:27Z - Some or all of your subset selection [-35.0, -5.0] for the longitude dimension  exceed the dataset coordinates [-30.0625, 42.0625]\n",
+      "WARNING - 2024-05-20T09:38:27Z - Some or all of your subset selection [2024-04-20 00:00:00, 2024-05-20 10:31:30] for the time dimension  exceed the dataset coordinates [2022-01-01 00:00:00, 2024-05-20 00:00:00]\n",
+      "INFO - 2024-05-20T09:38:27Z - Downloading using service arco-geo-series...\n",
+      "INFO - 2024-05-20T09:38:31Z - <xarray.Dataset> Size: 44MB\n",
+      "Dimensions:    (time: 31, latitude: 88, longitude: 201, nv: 2)\n",
       "Coordinates:\n",
-      "  * latitude             (latitude) float32 4kB 55.01 55.02 ... 64.98 64.99\n",
-      "  * longitude            (longitude) float32 6kB -24.99 -24.98 ... -10.02 -10.01\n",
-      "  * time                 (time) datetime64[ns] 152B 2024-04-28 ... 2024-05-16\n",
-      "Data variables: (12/21)\n",
-      "    CHL                  (time, latitude, longitude) float32 105MB dask.array<chunksize=(5, 256, 256), meta=np.ndarray>\n",
-      "    CHL_uncertainty      (time, latitude, longitude) float64 210MB dask.array<chunksize=(5, 256, 256), meta=np.ndarray>\n",
-      "    DIATO                (time, latitude, longitude) float32 105MB dask.array<chunksize=(5, 256, 256), meta=np.ndarray>\n",
-      "    DIATO_uncertainty    (time, latitude, longitude) float64 210MB dask.array<chunksize=(5, 256, 256), meta=np.ndarray>\n",
-      "    DINO                 (time, latitude, longitude) float32 105MB dask.array<chunksize=(5, 256, 256), meta=np.ndarray>\n",
-      "    DINO_uncertainty     (time, latitude, longitude) float64 210MB dask.array<chunksize=(5, 256, 256), meta=np.ndarray>\n",
-      "    ...                   ...\n",
-      "    PICO_uncertainty     (time, latitude, longitude) float64 210MB dask.array<chunksize=(5, 256, 256), meta=np.ndarray>\n",
-      "    PROCHLO              (time, latitude, longitude) float32 105MB dask.array<chunksize=(5, 256, 256), meta=np.ndarray>\n",
-      "    PROCHLO_uncertainty  (time, latitude, longitude) float64 210MB dask.array<chunksize=(5, 256, 256), meta=np.ndarray>\n",
-      "    PROKAR               (time, latitude, longitude) float32 105MB dask.array<chunksize=(5, 256, 256), meta=np.ndarray>\n",
-      "    PROKAR_uncertainty   (time, latitude, longitude) float64 210MB dask.array<chunksize=(5, 256, 256), meta=np.ndarray>\n",
-      "    flags                (time, latitude, longitude) int8 26MB dask.array<chunksize=(5, 256, 256), meta=np.ndarray>\n",
-      "Attributes: (12/92)\n",
-      "    Conventions:                     CF-1.8, ACDD-1.3\n",
-      "    DPM_reference:                   GC-UD-ACRI-PUG\n",
-      "    IODD_reference:                  GC-UD-ACRI-PUG\n",
-      "    acknowledgement:                 The Licensees will ensure that original ...\n",
-      "    citation:                        The Licensees will ensure that original ...\n",
-      "    cmems_product_id:                OCEANCOLOUR_ATL_BGC_L3_NRT_009_111\n",
+      "    lat_bnds   (latitude, nv) float32 704B dask.array<chunksize=(88, 2), meta=np.ndarray>\n",
+      "  * latitude   (latitude) float32 352B 55.06 55.19 55.31 ... 65.69 65.81 65.94\n",
+      "    lon_bnds   (longitude, nv) float32 2kB dask.array<chunksize=(201, 2), meta=np.ndarray>\n",
+      "  * longitude  (longitude) float32 804B -30.06 -29.94 -29.81 ... -5.188 -5.062\n",
+      "  * nv         (nv) int32 8B 0 1\n",
+      "  * time       (time) datetime64[ns] 248B 2024-04-20 2024-04-21 ... 2024-05-20\n",
+      "Data variables:\n",
+      "    adt        (time, latitude, longitude) float64 4MB dask.array<chunksize=(2, 88, 201), meta=np.ndarray>\n",
+      "    err_sla    (time, latitude, longitude) float64 4MB dask.array<chunksize=(2, 88, 201), meta=np.ndarray>\n",
+      "    err_ugosa  (time, latitude, longitude) float64 4MB dask.array<chunksize=(2, 88, 201), meta=np.ndarray>\n",
+      "    err_vgosa  (time, latitude, longitude) float64 4MB dask.array<chunksize=(2, 88, 201), meta=np.ndarray>\n",
+      "    flag_ice   (time, latitude, longitude) float64 4MB dask.array<chunksize=(2, 88, 201), meta=np.ndarray>\n",
+      "    sla        (time, latitude, longitude) float64 4MB dask.array<chunksize=(2, 88, 201), meta=np.ndarray>\n",
+      "    ugos       (time, latitude, longitude) float64 4MB dask.array<chunksize=(2, 88, 201), meta=np.ndarray>\n",
+      "    ugosa      (time, latitude, longitude) float64 4MB dask.array<chunksize=(2, 88, 201), meta=np.ndarray>\n",
+      "    vgos       (time, latitude, longitude) float64 4MB dask.array<chunksize=(2, 88, 201), meta=np.ndarray>\n",
+      "    vgosa      (time, latitude, longitude) float64 4MB dask.array<chunksize=(2, 88, 201), meta=np.ndarray>\n",
+      "Attributes: (12/45)\n",
+      "    Conventions:                     CF-1.6\n",
+      "    Metadata_Conventions:            Unidata Dataset Discovery v1.0\n",
+      "    cdm_data_type:                   Grid\n",
+      "    comment:                         Sea Surface Height measured by Altimetry...\n",
+      "    contact:                         servicedesk.cmems@mercator-ocean.eu\n",
+      "    creator_email:                   servicedesk.cmems@mercator-ocean.eu\n",
       "    ...                              ...\n",
+      "    time_coverage_duration:          P1D\n",
+      "    time_coverage_end:               2023-11-24T12:00:00Z\n",
       "    time_coverage_resolution:        P1D\n",
-      "    time_coverage_start:             2023-10-15T06:57:27Z\n",
-      "    title:                           cmems_obs-oc_atl_bgc-plankton_nrt_l3-mul...\n",
-      "    westernmost_longitude:           -46.0\n",
-      "    westernmost_valid_longitude:     -46.0\n",
+      "    time_coverage_start:             2023-11-23T12:00:00Z\n",
+      "    title:                           NRT merged all satellites European Seas ...\n",
       "    copernicusmarine_version:        1.2.2\n",
-      "INFO - 2024-05-17T14:51:09Z - Estimated size of the dataset file is 2105.258 MB.\n",
-      "Do you want to proceed with download? [Y/n]:INFO - 2024-05-17T14:51:11Z - Writing to local storage. Please wait...\n"
+      "INFO - 2024-05-20T09:38:31Z - Estimated size of the dataset file is 83.714 MB.\n",
+      "Do you want to proceed with download? [Y/n]:Error: invalid input\n",
+      "Do you want to proceed with download? [Y/n]:INFO - 2024-05-20T09:45:34Z - Writing to local storage. Please wait...\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5d9f33c1cdfe430dae7369cc02195f26",
+       "model_id": "e29663770d15401bab02cfacd7b0948f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/17546 [00:00<?, ?it/s]"
+       "  0%|          | 0/648 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -200,16 +204,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO - 2024-05-17T14:52:24Z - Successfully downloaded to c:\\Users\\flapet\\OneDrive - NOC\\Documents\\NRT_viz\\biocarbon_nrt_data_viz\\data\\satellite\\CMEMS_Iceland_Basin_CHLA_April-May2024.nc\n"
+      "INFO - 2024-05-20T09:45:44Z - Successfully downloaded to c:\\Users\\flapet\\OneDrive - NOC\\Documents\\NRT_viz\\biocarbon_nrt_data_viz\\data\\satellite\\CMEMS_Iceland_Basin_SSH_April-May2024.nc\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "WindowsPath('c:/Users/flapet/OneDrive - NOC/Documents/NRT_viz/biocarbon_nrt_data_viz/data/satellite/CMEMS_Iceland_Basin_CHLA_April-May2024.nc')"
+       "WindowsPath('c:/Users/flapet/OneDrive - NOC/Documents/NRT_viz/biocarbon_nrt_data_viz/data/satellite/CMEMS_Iceland_Basin_SSH_April-May2024.nc')"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
