--- a/Python_notebooks/satellite_data_download.ipynb
+++ b/Python_notebooks/satellite_data_download.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
     "\n",
     "#variables_to_extract = [var_to_extract] # Input for variable must be list\n",
     "\n",
-    "start_time = \"2024-04-20T00:00:00\" # Format time as YYYY-MM-DD\"T\"HH:MM:SS ,without T in parenthesis\n",
+    "start_time = \"2024-05-01T00:00:00\" # Format time as YYYY-MM-DD\"T\"HH:MM:SS ,without T in parenthesis\n",
     "\n",
     "# Get the current date and time\n",
     "now = datetime.now()\n",
@@ -129,44 +129,47 @@
     "min_lat = 55\n",
     "max_lat = 66\n",
     "\n",
-    "saved_netCDF_as = \"CMEMS_Iceland_Basin_SSH_April-May2024.nc\" # This changes the name of the output file."
+    "saved_netCDF_as = \"CMEMS_Iceland_Basin_SSH_April-May2024.nc\" # This changes the name of the output file.\n",
+    "\n",
+    "filepath = os.path.join(satellite_dir, saved_netCDF_as)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO - 2024-05-20T09:38:19Z - Dataset version was not specified, the latest one was selected: \"202311\"\n",
-      "INFO - 2024-05-20T09:38:19Z - Dataset part was not specified, the first one was selected: \"default\"\n",
-      "INFO - 2024-05-20T09:38:23Z - Service was not specified, the default one was selected: \"arco-geo-series\"\n",
-      "WARNING - 2024-05-20T09:38:27Z - Some or all of your subset selection [-35.0, -5.0] for the longitude dimension  exceed the dataset coordinates [-30.0625, 42.0625]\n",
-      "WARNING - 2024-05-20T09:38:27Z - Some or all of your subset selection [2024-04-20 00:00:00, 2024-05-20 10:31:30] for the time dimension  exceed the dataset coordinates [2022-01-01 00:00:00, 2024-05-20 00:00:00]\n",
-      "INFO - 2024-05-20T09:38:27Z - Downloading using service arco-geo-series...\n",
-      "INFO - 2024-05-20T09:38:31Z - <xarray.Dataset> Size: 44MB\n",
-      "Dimensions:    (time: 31, latitude: 88, longitude: 201, nv: 2)\n",
+      "c:\\Users\\flapet\\OneDrive - NOC\\Documents\\NRT_viz\\biocarbon_nrt_data_viz\\data\\satellite\\CMEMS_Iceland_Basin_SSH_April-May2024.nc exists. It will be replaced.\n",
+      "INFO - 2024-05-22T14:56:59Z - Dataset version was not specified, the latest one was selected: \"202311\"\n",
+      "INFO - 2024-05-22T14:56:59Z - Dataset part was not specified, the first one was selected: \"default\"\n",
+      "INFO - 2024-05-22T14:57:04Z - Service was not specified, the default one was selected: \"arco-geo-series\"\n",
+      "WARNING - 2024-05-22T14:57:07Z - Some or all of your subset selection [-35.0, -5.0] for the longitude dimension  exceed the dataset coordinates [-30.0625, 42.0625]\n",
+      "WARNING - 2024-05-22T14:57:07Z - Some or all of your subset selection [2024-05-01 00:00:00, 2024-05-22 15:56:57] for the time dimension  exceed the dataset coordinates [2022-01-01 00:00:00, 2024-05-22 00:00:00]\n",
+      "INFO - 2024-05-22T14:57:07Z - Downloading using service arco-geo-series...\n",
+      "INFO - 2024-05-22T14:57:10Z - <xarray.Dataset> Size: 31MB\n",
+      "Dimensions:    (time: 22, latitude: 88, longitude: 201, nv: 2)\n",
       "Coordinates:\n",
       "    lat_bnds   (latitude, nv) float32 704B dask.array<chunksize=(88, 2), meta=np.ndarray>\n",
       "  * latitude   (latitude) float32 352B 55.06 55.19 55.31 ... 65.69 65.81 65.94\n",
       "    lon_bnds   (longitude, nv) float32 2kB dask.array<chunksize=(201, 2), meta=np.ndarray>\n",
       "  * longitude  (longitude) float32 804B -30.06 -29.94 -29.81 ... -5.188 -5.062\n",
       "  * nv         (nv) int32 8B 0 1\n",
-      "  * time       (time) datetime64[ns] 248B 2024-04-20 2024-04-21 ... 2024-05-20\n",
+      "  * time       (time) datetime64[ns] 176B 2024-05-01 2024-05-02 ... 2024-05-22\n",
       "Data variables:\n",
-      "    adt        (time, latitude, longitude) float64 4MB dask.array<chunksize=(2, 88, 201), meta=np.ndarray>\n",
-      "    err_sla    (time, latitude, longitude) float64 4MB dask.array<chunksize=(2, 88, 201), meta=np.ndarray>\n",
-      "    err_ugosa  (time, latitude, longitude) float64 4MB dask.array<chunksize=(2, 88, 201), meta=np.ndarray>\n",
-      "    err_vgosa  (time, latitude, longitude) float64 4MB dask.array<chunksize=(2, 88, 201), meta=np.ndarray>\n",
-      "    flag_ice   (time, latitude, longitude) float64 4MB dask.array<chunksize=(2, 88, 201), meta=np.ndarray>\n",
-      "    sla        (time, latitude, longitude) float64 4MB dask.array<chunksize=(2, 88, 201), meta=np.ndarray>\n",
-      "    ugos       (time, latitude, longitude) float64 4MB dask.array<chunksize=(2, 88, 201), meta=np.ndarray>\n",
-      "    ugosa      (time, latitude, longitude) float64 4MB dask.array<chunksize=(2, 88, 201), meta=np.ndarray>\n",
-      "    vgos       (time, latitude, longitude) float64 4MB dask.array<chunksize=(2, 88, 201), meta=np.ndarray>\n",
-      "    vgosa      (time, latitude, longitude) float64 4MB dask.array<chunksize=(2, 88, 201), meta=np.ndarray>\n",
+      "    adt        (time, latitude, longitude) float64 3MB dask.array<chunksize=(2, 88, 201), meta=np.ndarray>\n",
+      "    err_sla    (time, latitude, longitude) float64 3MB dask.array<chunksize=(2, 88, 201), meta=np.ndarray>\n",
+      "    err_ugosa  (time, latitude, longitude) float64 3MB dask.array<chunksize=(2, 88, 201), meta=np.ndarray>\n",
+      "    err_vgosa  (time, latitude, longitude) float64 3MB dask.array<chunksize=(2, 88, 201), meta=np.ndarray>\n",
+      "    flag_ice   (time, latitude, longitude) float64 3MB dask.array<chunksize=(2, 88, 201), meta=np.ndarray>\n",
+      "    sla        (time, latitude, longitude) float64 3MB dask.array<chunksize=(2, 88, 201), meta=np.ndarray>\n",
+      "    ugos       (time, latitude, longitude) float64 3MB dask.array<chunksize=(2, 88, 201), meta=np.ndarray>\n",
+      "    ugosa      (time, latitude, longitude) float64 3MB dask.array<chunksize=(2, 88, 201), meta=np.ndarray>\n",
+      "    vgos       (time, latitude, longitude) float64 3MB dask.array<chunksize=(2, 88, 201), meta=np.ndarray>\n",
+      "    vgosa      (time, latitude, longitude) float64 3MB dask.array<chunksize=(2, 88, 201), meta=np.ndarray>\n",
       "Attributes: (12/45)\n",
       "    Conventions:                     CF-1.6\n",
       "    Metadata_Conventions:            Unidata Dataset Discovery v1.0\n",
@@ -181,20 +184,19 @@
       "    time_coverage_start:             2023-11-23T12:00:00Z\n",
       "    title:                           NRT merged all satellites European Seas ...\n",
       "    copernicusmarine_version:        1.2.2\n",
-      "INFO - 2024-05-20T09:38:31Z - Estimated size of the dataset file is 83.714 MB.\n",
-      "Do you want to proceed with download? [Y/n]:Error: invalid input\n",
-      "Do you want to proceed with download? [Y/n]:INFO - 2024-05-20T09:45:34Z - Writing to local storage. Please wait...\n"
+      "INFO - 2024-05-22T14:57:11Z - Estimated size of the dataset file is 59.410 MB.\n",
+      "Do you want to proceed with download? [Y/n]:INFO - 2024-05-22T14:57:12Z - Writing to local storage. Please wait...\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e29663770d15401bab02cfacd7b0948f",
+       "model_id": "03bb73e77d9743aebd4108fdccf433d8",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/648 [00:00<?, ?it/s]"
+       "  0%|          | 0/778 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -204,7 +206,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO - 2024-05-20T09:45:44Z - Successfully downloaded to c:\\Users\\flapet\\OneDrive - NOC\\Documents\\NRT_viz\\biocarbon_nrt_data_viz\\data\\satellite\\CMEMS_Iceland_Basin_SSH_April-May2024.nc\n"
+      "INFO - 2024-05-22T14:57:21Z - Successfully downloaded to c:\\Users\\flapet\\OneDrive - NOC\\Documents\\NRT_viz\\biocarbon_nrt_data_viz\\data\\satellite\\CMEMS_Iceland_Basin_SSH_April-May2024.nc\n"
      ]
     },
     {
@@ -213,12 +215,17 @@
        "WindowsPath('c:/Users/flapet/OneDrive - NOC/Documents/NRT_viz/biocarbon_nrt_data_viz/data/satellite/CMEMS_Iceland_Basin_SSH_April-May2024.nc')"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "if os.path.exists(filepath):\n",
+    "  print(f\"{filepath} exists. It will be replaced.\")\n",
+    "  os.remove(saved_netCDF_as)  # Remove the existing file\n",
+    "else:\n",
+    "  print(f\"{saved_netCDF_as} does not exist. Proceeding to download.\")\n",
     "cpm.subset(dataset_id=dataset_to_extract,\n",
     "  minimum_longitude= min_lon,\n",
     "  maximum_longitude= max_lon,\n",
