fix saving path

--- a/Python_notebooks/temp_sat_vis_notebook.ipynb
+++ b/Python_notebooks/temp_sat_vis_notebook.ipynb
@@ -44,8 +44,8 @@
     "output_dir = os.path.join(parent_dir, 'Output/sat_plot')\n",
     "\n",
     "#Products come from satellite_data_download.ipynb\n",
-    "chla_data = xr.open_dataset(os.path.join(satellite_dir, 'CMEMS_Iceland_Basin_CHLA_April-May2024.nc'))\n",
-    "current_data = xr.open_dataset(os.path.join(satellite_dir, 'CMEMS_Iceland_Basin_SSH_April-May2024.nc'))\n",
+    "chla_data = xr.open_dataset(os.path.join(output_dir, 'CMEMS_Iceland_Basin_CHLA_April-May2024.nc'))\n",
+    "current_data = xr.open_dataset(os.path.join(output_dir, 'CMEMS_Iceland_Basin_SSH_April-May2024.nc'))\n",
     "\n",
     "#Chla colorbar \n",
     "color = 'YlGnBu_r'\n",
@@ -149,7 +149,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 28%|██▊       | 5/18 [04:14<10:28, 48.38s/it]"
+      " 72%|███████▏  | 13/18 [14:07<06:09, 73.85s/it]"
      ]
     }
    ],
