--- a/Python_notebooks/satellite_data_download.ipynb
+++ b/Python_notebooks/satellite_data_download.ipynb
@@ -86,11 +86,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#dataset_to_extract = 'cmems_obs-oc_atl_bgc-plankton_nrt_l3-multi-1km_P1D' # for chla\n",
+    "dataset_to_extract = 'cmems_obs-oc_atl_bgc-plankton_nrt_l3-multi-1km_P1D' # for chla\n",
     "\n",
     "#dataset_to_extract = 'cmems_obs-oc_atl_bgc-optic_nrt_l3-multi-1km_P1D' # for bbp\n",
     "\n",
-    "dataset_to_extract = 'cmems_obs-sl_eur_phy-ssh_nrt_allsat-l4-duacs-0.125deg_P1D' #for current"
+    "#dataset_to_extract = 'cmems_obs-sl_eur_phy-ssh_nrt_allsat-l4-duacs-0.125deg_P1D' #for current"
    ]
   },
   {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,74 +129,74 @@
     "min_lat = 55\n",
     "max_lat = 66\n",
     "\n",
-    "saved_netCDF_as = \"CMEMS_Iceland_Basin_SSH_April-May2024.nc\" # This changes the name of the output file.\n",
+    "saved_netCDF_as = \"CMEMS_Iceland_Basin_CHLA_April-May2024.nc\" # This changes the name of the output file.\n",
     "\n",
     "filepath = os.path.join(satellite_dir, saved_netCDF_as)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\flapet\\OneDrive - NOC\\Documents\\NRT_viz\\biocarbon_nrt_data_viz\\data\\satellite\\CMEMS_Iceland_Basin_SSH_April-May2024.nc exists. It will be replaced.\n",
-      "INFO - 2024-05-22T14:56:59Z - Dataset version was not specified, the latest one was selected: \"202311\"\n",
-      "INFO - 2024-05-22T14:56:59Z - Dataset part was not specified, the first one was selected: \"default\"\n",
-      "INFO - 2024-05-22T14:57:04Z - Service was not specified, the default one was selected: \"arco-geo-series\"\n",
-      "WARNING - 2024-05-22T14:57:07Z - Some or all of your subset selection [-35.0, -5.0] for the longitude dimension  exceed the dataset coordinates [-30.0625, 42.0625]\n",
-      "WARNING - 2024-05-22T14:57:07Z - Some or all of your subset selection [2024-05-01 00:00:00, 2024-05-22 15:56:57] for the time dimension  exceed the dataset coordinates [2022-01-01 00:00:00, 2024-05-22 00:00:00]\n",
-      "INFO - 2024-05-22T14:57:07Z - Downloading using service arco-geo-series...\n",
-      "INFO - 2024-05-22T14:57:10Z - <xarray.Dataset> Size: 31MB\n",
-      "Dimensions:    (time: 22, latitude: 88, longitude: 201, nv: 2)\n",
+      "c:\\Users\\flapet\\OneDrive - NOC\\Documents\\NRT_viz\\biocarbon_nrt_data_viz\\data\\satellite\\CMEMS_Iceland_Basin_CHLA_April-May2024.nc exists. It will be replaced.\n",
+      "INFO - 2024-05-23T08:34:51Z - Dataset version was not specified, the latest one was selected: \"202311\"\n",
+      "INFO - 2024-05-23T08:34:51Z - Dataset part was not specified, the first one was selected: \"default\"\n",
+      "INFO - 2024-05-23T08:35:05Z - Service was not specified, the default one was selected: \"arco-geo-series\"\n",
+      "WARNING - 2024-05-23T08:35:11Z - Some or all of your subset selection [55, 66] for the latitude dimension  exceed the dataset coordinates [20.005207061767578, 65.99478912353516]\n",
+      "WARNING - 2024-05-23T08:35:11Z - Some or all of your subset selection [2024-05-01 00:00:00, 2024-05-23 09:34:19] for the time dimension  exceed the dataset coordinates [2024-05-02 23:00:00, 2024-05-21 00:00:00]\n",
+      "INFO - 2024-05-23T08:35:11Z - Downloading using service arco-geo-series...\n",
+      "INFO - 2024-05-23T08:35:18Z - <xarray.Dataset> Size: 7GB\n",
+      "Dimensions:              (time: 19, latitude: 1056, longitude: 2880)\n",
       "Coordinates:\n",
-      "    lat_bnds   (latitude, nv) float32 704B dask.array<chunksize=(88, 2), meta=np.ndarray>\n",
-      "  * latitude   (latitude) float32 352B 55.06 55.19 55.31 ... 65.69 65.81 65.94\n",
-      "    lon_bnds   (longitude, nv) float32 2kB dask.array<chunksize=(201, 2), meta=np.ndarray>\n",
-      "  * longitude  (longitude) float32 804B -30.06 -29.94 -29.81 ... -5.188 -5.062\n",
-      "  * nv         (nv) int32 8B 0 1\n",
-      "  * time       (time) datetime64[ns] 176B 2024-05-01 2024-05-02 ... 2024-05-22\n",
-      "Data variables:\n",
-      "    adt        (time, latitude, longitude) float64 3MB dask.array<chunksize=(2, 88, 201), meta=np.ndarray>\n",
-      "    err_sla    (time, latitude, longitude) float64 3MB dask.array<chunksize=(2, 88, 201), meta=np.ndarray>\n",
-      "    err_ugosa  (time, latitude, longitude) float64 3MB dask.array<chunksize=(2, 88, 201), meta=np.ndarray>\n",
-      "    err_vgosa  (time, latitude, longitude) float64 3MB dask.array<chunksize=(2, 88, 201), meta=np.ndarray>\n",
-      "    flag_ice   (time, latitude, longitude) float64 3MB dask.array<chunksize=(2, 88, 201), meta=np.ndarray>\n",
-      "    sla        (time, latitude, longitude) float64 3MB dask.array<chunksize=(2, 88, 201), meta=np.ndarray>\n",
-      "    ugos       (time, latitude, longitude) float64 3MB dask.array<chunksize=(2, 88, 201), meta=np.ndarray>\n",
-      "    ugosa      (time, latitude, longitude) float64 3MB dask.array<chunksize=(2, 88, 201), meta=np.ndarray>\n",
-      "    vgos       (time, latitude, longitude) float64 3MB dask.array<chunksize=(2, 88, 201), meta=np.ndarray>\n",
-      "    vgosa      (time, latitude, longitude) float64 3MB dask.array<chunksize=(2, 88, 201), meta=np.ndarray>\n",
-      "Attributes: (12/45)\n",
-      "    Conventions:                     CF-1.6\n",
-      "    Metadata_Conventions:            Unidata Dataset Discovery v1.0\n",
-      "    cdm_data_type:                   Grid\n",
-      "    comment:                         Sea Surface Height measured by Altimetry...\n",
-      "    contact:                         servicedesk.cmems@mercator-ocean.eu\n",
-      "    creator_email:                   servicedesk.cmems@mercator-ocean.eu\n",
+      "  * latitude             (latitude) float32 4kB 55.01 55.02 ... 65.98 65.99\n",
+      "  * longitude            (longitude) float32 12kB -34.99 -34.98 ... -5.005\n",
+      "  * time                 (time) datetime64[ns] 152B 2024-05-03 ... 2024-05-21\n",
+      "Data variables: (12/21)\n",
+      "    CHL                  (time, latitude, longitude) float32 231MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
+      "    CHL_uncertainty      (time, latitude, longitude) float64 462MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
+      "    DIATO                (time, latitude, longitude) float32 231MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
+      "    DIATO_uncertainty    (time, latitude, longitude) float64 462MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
+      "    DINO                 (time, latitude, longitude) float32 231MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
+      "    DINO_uncertainty     (time, latitude, longitude) float64 462MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
+      "    ...                   ...\n",
+      "    PICO_uncertainty     (time, latitude, longitude) float64 462MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
+      "    PROCHLO              (time, latitude, longitude) float32 231MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
+      "    PROCHLO_uncertainty  (time, latitude, longitude) float64 462MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
+      "    PROKAR               (time, latitude, longitude) float32 231MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
+      "    PROKAR_uncertainty   (time, latitude, longitude) float64 462MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
+      "    flags                (time, latitude, longitude) int8 58MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
+      "Attributes: (12/92)\n",
+      "    Conventions:                     CF-1.8, ACDD-1.3\n",
+      "    DPM_reference:                   GC-UD-ACRI-PUG\n",
+      "    IODD_reference:                  GC-UD-ACRI-PUG\n",
+      "    acknowledgement:                 The Licensees will ensure that original ...\n",
+      "    citation:                        The Licensees will ensure that original ...\n",
+      "    cmems_product_id:                OCEANCOLOUR_ATL_BGC_L3_NRT_009_111\n",
       "    ...                              ...\n",
-      "    time_coverage_duration:          P1D\n",
-      "    time_coverage_end:               2023-11-24T12:00:00Z\n",
       "    time_coverage_resolution:        P1D\n",
-      "    time_coverage_start:             2023-11-23T12:00:00Z\n",
-      "    title:                           NRT merged all satellites European Seas ...\n",
+      "    time_coverage_start:             2023-10-15T06:57:27Z\n",
+      "    title:                           cmems_obs-oc_atl_bgc-plankton_nrt_l3-mul...\n",
+      "    westernmost_longitude:           -46.0\n",
+      "    westernmost_valid_longitude:     -46.0\n",
       "    copernicusmarine_version:        1.2.2\n",
-      "INFO - 2024-05-22T14:57:11Z - Estimated size of the dataset file is 59.410 MB.\n",
-      "Do you want to proceed with download? [Y/n]:INFO - 2024-05-22T14:57:12Z - Writing to local storage. Please wait...\n"
+      "INFO - 2024-05-23T08:35:18Z - Estimated size of the dataset file is 4631.568 MB.\n",
+      "Do you want to proceed with download? [Y/n]:INFO - 2024-05-23T08:36:12Z - Writing to local storage. Please wait...\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "03bb73e77d9743aebd4108fdccf433d8",
+       "model_id": "abef41a668b94f26b63e9bad0f8a0345",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/778 [00:00<?, ?it/s]"
+       "  0%|          | 0/36102 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -206,16 +206,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO - 2024-05-22T14:57:21Z - Successfully downloaded to c:\\Users\\flapet\\OneDrive - NOC\\Documents\\NRT_viz\\biocarbon_nrt_data_viz\\data\\satellite\\CMEMS_Iceland_Basin_SSH_April-May2024.nc\n"
+      "INFO - 2024-05-23T08:38:04Z - Successfully downloaded to c:\\Users\\flapet\\OneDrive - NOC\\Documents\\NRT_viz\\biocarbon_nrt_data_viz\\data\\satellite\\CMEMS_Iceland_Basin_CHLA_April-May2024.nc\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "WindowsPath('c:/Users/flapet/OneDrive - NOC/Documents/NRT_viz/biocarbon_nrt_data_viz/data/satellite/CMEMS_Iceland_Basin_SSH_April-May2024.nc')"
+       "WindowsPath('c:/Users/flapet/OneDrive - NOC/Documents/NRT_viz/biocarbon_nrt_data_viz/data/satellite/CMEMS_Iceland_Basin_CHLA_April-May2024.nc')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +223,7 @@
    "source": [
     "if os.path.exists(filepath):\n",
     "  print(f\"{filepath} exists. It will be replaced.\")\n",
-    "  os.remove(saved_netCDF_as)  # Remove the existing file\n",
+    "  os.remove(filepath)  # Remove the existing file\n",
     "else:\n",
     "  print(f\"{saved_netCDF_as} does not exist. Proceeding to download.\")\n",
     "cpm.subset(dataset_id=dataset_to_extract,\n",
