--- a/Python_notebooks/satellite_data_download.ipynb
+++ b/Python_notebooks/satellite_data_download.ipynb
@@ -12,7 +12,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\hanshil\\.conda\\envs\\BIOCarbon_Conda_Env\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "# I think a lot of these are unnecessary!\n",
     "import os\n",
@@ -72,23 +81,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If it is the first time running copernicusmarine module on this machine, login using the terminal with:\n",
-    "<code><pre>copernicusmarine login</code></pre>\n",
-    "And enter your credentials. You will need an account already to do this. (https://data.marine.copernicus.eu/register) </br>\n",
-    "This will store a credential file locally, you should only have to do this once per machine.\n",
+    "If it is the first time running copernicusmarine module on this machine you must login. </br>\n",
+    "Using the terminal,</br>\n",
+    "<pre>copernicusmarine login</pre>\n",
+    "or,</br>\n",
+    "<pre>cpm.login()</pre>\n",
+    "and enter your credentials.</br>\n",
+    "You will need an account to do this. (https://data.marine.copernicus.eu/register) </br>\n",
+    "Your credentials are stored locally, you should only have to do this once per machine.\n",
+    "\n",
+    "\n",
     "\n",
     "When changing the catalogue search term, use the name of the product you'd like, e.g., from this domain, (https://data.marine.copernicus.eu/product/OCEANCOLOUR_ATL_BGC_L3_NRT_009_111/services), any of the named Dataset ID's"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_to_extract = 'cmems_obs-oc_atl_bgc-plankton_nrt_l3-multi-1km_P1D' # for chla\n",
+    "#dataset_to_extract = 'cmems_obs-oc_atl_bgc-plankton_nrt_l3-multi-1km_P1D' # for chla\n",
     "\n",
-    "#dataset_to_extract = 'cmems_obs-oc_atl_bgc-optic_nrt_l3-multi-1km_P1D' # for bbp\n",
+    "dataset_to_extract = 'cmems_obs-oc_atl_bgc-optics_nrt_l3-multi-1km_P1D' # for bbp\n",
     "\n",
     "#dataset_to_extract = 'cmems_obs-sl_eur_phy-ssh_nrt_allsat-l4-duacs-0.125deg_P1D' #for current"
    ]
@@ -102,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,47 +144,39 @@
     "min_lat = 55\n",
     "max_lat = 66\n",
     "\n",
-    "saved_netCDF_as = \"CMEMS_Iceland_Basin_CHLA_April-May2024.nc\" # This changes the name of the output file.\n",
+    "saved_netCDF_as = \"CMEMS_Iceland_Basin_BBP_April-May2024.nc\" # This changes the name of the output file.\n",
     "\n",
     "filepath = os.path.join(satellite_dir, saved_netCDF_as)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\flapet\\OneDrive - NOC\\Documents\\NRT_viz\\biocarbon_nrt_data_viz\\data\\satellite\\CMEMS_Iceland_Basin_CHLA_April-May2024.nc exists. It will be replaced.\n",
-      "INFO - 2024-05-23T08:34:51Z - Dataset version was not specified, the latest one was selected: \"202311\"\n",
-      "INFO - 2024-05-23T08:34:51Z - Dataset part was not specified, the first one was selected: \"default\"\n",
-      "INFO - 2024-05-23T08:35:05Z - Service was not specified, the default one was selected: \"arco-geo-series\"\n",
-      "WARNING - 2024-05-23T08:35:11Z - Some or all of your subset selection [55, 66] for the latitude dimension  exceed the dataset coordinates [20.005207061767578, 65.99478912353516]\n",
-      "WARNING - 2024-05-23T08:35:11Z - Some or all of your subset selection [2024-05-01 00:00:00, 2024-05-23 09:34:19] for the time dimension  exceed the dataset coordinates [2024-05-02 23:00:00, 2024-05-21 00:00:00]\n",
-      "INFO - 2024-05-23T08:35:11Z - Downloading using service arco-geo-series...\n",
-      "INFO - 2024-05-23T08:35:18Z - <xarray.Dataset> Size: 7GB\n",
-      "Dimensions:              (time: 19, latitude: 1056, longitude: 2880)\n",
+      "CMEMS_Iceland_Basin_BBP_April-May2024.nc does not exist. Proceeding to download.\n",
+      "INFO - 2024-05-24T10:46:33Z - Dataset version was not specified, the latest one was selected: \"202311\"\n",
+      "INFO - 2024-05-24T10:46:33Z - Dataset part was not specified, the first one was selected: \"default\"\n",
+      "INFO - 2024-05-24T10:46:45Z - Service was not specified, the default one was selected: \"arco-geo-series\"\n",
+      "WARNING - 2024-05-24T10:46:55Z - Some or all of your subset selection [55, 66] for the latitude dimension  exceed the dataset coordinates [20.005207061767578, 65.99478912353516]\n",
+      "WARNING - 2024-05-24T10:46:55Z - Some or all of your subset selection [2024-05-01 00:00:00, 2024-05-24 11:45:22] for the time dimension  exceed the dataset coordinates [2024-05-07 23:00:00, 2024-05-22 00:00:00]\n",
+      "INFO - 2024-05-24T10:46:55Z - Downloading using service arco-geo-series...\n",
+      "INFO - 2024-05-24T10:47:07Z - <xarray.Dataset> Size: 1GB\n",
+      "Dimensions:          (time: 16, latitude: 1056, longitude: 2880)\n",
       "Coordinates:\n",
-      "  * latitude             (latitude) float32 4kB 55.01 55.02 ... 65.98 65.99\n",
-      "  * longitude            (longitude) float32 12kB -34.99 -34.98 ... -5.005\n",
-      "  * time                 (time) datetime64[ns] 152B 2024-05-03 ... 2024-05-21\n",
-      "Data variables: (12/21)\n",
-      "    CHL                  (time, latitude, longitude) float32 231MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
-      "    CHL_uncertainty      (time, latitude, longitude) float64 462MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
-      "    DIATO                (time, latitude, longitude) float32 231MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
-      "    DIATO_uncertainty    (time, latitude, longitude) float64 462MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
-      "    DINO                 (time, latitude, longitude) float32 231MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
-      "    DINO_uncertainty     (time, latitude, longitude) float64 462MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
-      "    ...                   ...\n",
-      "    PICO_uncertainty     (time, latitude, longitude) float64 462MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
-      "    PROCHLO              (time, latitude, longitude) float32 231MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
-      "    PROCHLO_uncertainty  (time, latitude, longitude) float64 462MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
-      "    PROKAR               (time, latitude, longitude) float32 231MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
-      "    PROKAR_uncertainty   (time, latitude, longitude) float64 462MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
-      "    flags                (time, latitude, longitude) int8 58MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
+      "  * latitude         (latitude) float32 4kB 55.01 55.02 55.03 ... 65.98 65.99\n",
+      "  * longitude        (longitude) float32 12kB -34.99 -34.98 ... -5.016 -5.005\n",
+      "  * time             (time) datetime64[ns] 128B 2024-05-08 ... 2024-05-23\n",
+      "Data variables:\n",
+      "    BBP              (time, latitude, longitude) float32 195MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
+      "    BBP_uncertainty  (time, latitude, longitude) float64 389MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
+      "    CDM              (time, latitude, longitude) float32 195MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
+      "    CDM_uncertainty  (time, latitude, longitude) float64 389MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
+      "    flags            (time, latitude, longitude) int8 49MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
       "Attributes: (12/92)\n",
       "    Conventions:                     CF-1.8, ACDD-1.3\n",
       "    DPM_reference:                   GC-UD-ACRI-PUG\n",
@@ -179,54 +186,61 @@
       "    cmems_product_id:                OCEANCOLOUR_ATL_BGC_L3_NRT_009_111\n",
       "    ...                              ...\n",
       "    time_coverage_resolution:        P1D\n",
-      "    time_coverage_start:             2023-10-15T06:57:27Z\n",
-      "    title:                           cmems_obs-oc_atl_bgc-plankton_nrt_l3-mul...\n",
+      "    time_coverage_start:             2023-10-15T09:48:09Z\n",
+      "    title:                           cmems_obs-oc_atl_bgc-optics_nrt_l3-multi...\n",
       "    westernmost_longitude:           -46.0\n",
       "    westernmost_valid_longitude:     -46.0\n",
       "    copernicusmarine_version:        1.2.2\n",
-      "INFO - 2024-05-23T08:35:18Z - Estimated size of the dataset file is 4631.568 MB.\n",
-      "Do you want to proceed with download? [Y/n]:INFO - 2024-05-23T08:36:12Z - Writing to local storage. Please wait...\n"
+      "INFO - 2024-05-24T10:47:07Z - Estimated size of the dataset file is 928.635 MB.\n",
+      "Do you want to proceed with download? [Y/n]:INFO - 2024-05-24T10:47:10Z - Writing to local storage. Please wait...\n"
      ]
     },
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "abef41a668b94f26b63e9bad0f8a0345",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/36102 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 7106/7106 [01:12<00:00, 98.46it/s] "
+     ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO - 2024-05-23T08:38:04Z - Successfully downloaded to c:\\Users\\flapet\\OneDrive - NOC\\Documents\\NRT_viz\\biocarbon_nrt_data_viz\\data\\satellite\\CMEMS_Iceland_Basin_CHLA_April-May2024.nc\n"
+      "INFO - 2024-05-24T10:48:23Z - Successfully downloaded to c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\CMEMS_Iceland_Basin_BBP_April-May2024.nc\n"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "WindowsPath('c:/Users/flapet/OneDrive - NOC/Documents/NRT_viz/biocarbon_nrt_data_viz/data/satellite/CMEMS_Iceland_Basin_CHLA_April-May2024.nc')"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
     }
    ],
    "source": [
     "if os.path.exists(filepath):\n",
-    "  print(f\"{filepath} exists. It will be replaced.\")\n",
-    "  os.remove(filepath)  # Remove the existing file\n",
+    "  response = input(\"Do you want to remove and overwrite the file \" + f\"\\\"{saved_netCDF_as}\\\"\" + \" (y/n): \").strip().lower()\n",
+    "  if response == 'y':\n",
+    "        os.remove(filepath)\n",
+    "        print(f\"{filepath} has been removed.\")\n",
+    "        os.remove(filepath)  # Remove the existing file\n",
+    "        print(f\"{saved_netCDF_as}. Proceeding to download.\")\n",
+    "        cpm.subset(dataset_id=dataset_to_extract,\n",
+    "        minimum_longitude= min_lon,\n",
+    "        maximum_longitude= max_lon,\n",
+    "        minimum_latitude= min_lat,\n",
+    "        maximum_latitude= max_lat,\n",
+    "        start_datetime=start_time,\n",
+    "        end_datetime=end_time,\n",
+    "        minimum_depth=min_depth,\n",
+    "        maximum_depth=max_depth,\n",
+    "        output_filename = saved_netCDF_as,\n",
+    "        output_directory = satellite_dir)\n",
+    "  else:\n",
+    "        print(\"Download canceled.\")\n",
     "else:\n",
     "  print(f\"{saved_netCDF_as} does not exist. Proceeding to download.\")\n",
-    "cpm.subset(dataset_id=dataset_to_extract,\n",
+    "  cpm.subset(dataset_id=dataset_to_extract,\n",
     "  minimum_longitude= min_lon,\n",
     "  maximum_longitude= max_lon,\n",
     "  minimum_latitude= min_lat,\n",
@@ -236,7 +250,8 @@
     "  minimum_depth=min_depth,\n",
     "  maximum_depth=max_depth,\n",
     "  output_filename = saved_netCDF_as,\n",
-    "  output_directory = satellite_dir)"
+    "  output_directory = satellite_dir)\n",
+    "  "
    ]
   }
  ],
@@ -256,7 +271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
