--- a/Python_notebooks/satellite_data_download.ipynb
+++ b/Python_notebooks/satellite_data_download.ipynb
@@ -12,16 +12,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\hanshil\\.conda\\envs\\BIOCarbon_Conda_Env\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# I think a lot of these are unnecessary!\n",
     "import os\n",
@@ -97,15 +88,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#dataset_to_extract = 'cmems_obs-oc_atl_bgc-plankton_nrt_l3-multi-1km_P1D' # for chla\n",
+    "dataset_to_extract = 'cmems_obs-oc_atl_bgc-plankton_nrt_l3-multi-1km_P1D' # for chla\n",
     "\n",
-    "dataset_to_extract = 'cmems_obs-oc_atl_bgc-optics_nrt_l3-multi-1km_P1D' # for bbp\n",
+    "#dataset_to_extract = 'cmems_obs-oc_atl_bgc-optics_nrt_l3-multi-1km_P1D' # for bbp\n",
     "\n",
-    "#dataset_to_extract = 'cmems_obs-sl_eur_phy-ssh_nrt_allsat-l4-duacs-0.125deg_P1D' #for current"
+    "#dataset_to_extract = 'cmems_obs-sl_eur_phy-ssh_nrt_allsat-l4-duacs-0.125deg_P1D' #for current\n",
+    "\n",
+    "#dataset_to_extract = 'cmems_mod_glo_bgc-car_anfc_0.25deg_P1D-m' # for carbonate"
    ]
   },
   {
@@ -117,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,39 +137,47 @@
     "min_lat = 55\n",
     "max_lat = 66\n",
     "\n",
-    "saved_netCDF_as = \"CMEMS_Iceland_Basin_BBP_April-May2024.nc\" # This changes the name of the output file.\n",
+    "saved_netCDF_as = \"CMEMS_Iceland_Basin_CHLA_April-May2024.nc\" # This changes the name of the output file.\n",
     "\n",
     "filepath = os.path.join(satellite_dir, saved_netCDF_as)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CMEMS_Iceland_Basin_BBP_April-May2024.nc does not exist. Proceeding to download.\n",
-      "INFO - 2024-05-24T10:46:33Z - Dataset version was not specified, the latest one was selected: \"202311\"\n",
-      "INFO - 2024-05-24T10:46:33Z - Dataset part was not specified, the first one was selected: \"default\"\n",
-      "INFO - 2024-05-24T10:46:45Z - Service was not specified, the default one was selected: \"arco-geo-series\"\n",
-      "WARNING - 2024-05-24T10:46:55Z - Some or all of your subset selection [55, 66] for the latitude dimension  exceed the dataset coordinates [20.005207061767578, 65.99478912353516]\n",
-      "WARNING - 2024-05-24T10:46:55Z - Some or all of your subset selection [2024-05-01 00:00:00, 2024-05-24 11:45:22] for the time dimension  exceed the dataset coordinates [2024-05-07 23:00:00, 2024-05-22 00:00:00]\n",
-      "INFO - 2024-05-24T10:46:55Z - Downloading using service arco-geo-series...\n",
-      "INFO - 2024-05-24T10:47:07Z - <xarray.Dataset> Size: 1GB\n",
-      "Dimensions:          (time: 16, latitude: 1056, longitude: 2880)\n",
+      "CMEMS_Iceland_Basin_CHLA_April-May2024.nc does not exist. Proceeding to download.\n",
+      "INFO - 2024-05-24T19:29:30Z - Dataset version was not specified, the latest one was selected: \"202311\"\n",
+      "INFO - 2024-05-24T19:29:30Z - Dataset part was not specified, the first one was selected: \"default\"\n",
+      "INFO - 2024-05-24T19:29:40Z - Service was not specified, the default one was selected: \"arco-geo-series\"\n",
+      "WARNING - 2024-05-24T19:29:46Z - Some or all of your subset selection [55, 66] for the latitude dimension  exceed the dataset coordinates [20.005207061767578, 65.99478912353516]\n",
+      "WARNING - 2024-05-24T19:29:46Z - Some or all of your subset selection [2024-05-01 00:00:00, 2024-05-24 20:29:03] for the time dimension  exceed the dataset coordinates [2024-05-07 23:00:00, 2024-05-23 00:00:00]\n",
+      "INFO - 2024-05-24T19:29:46Z - Downloading using service arco-geo-series...\n",
+      "INFO - 2024-05-24T19:29:54Z - <xarray.Dataset> Size: 6GB\n",
+      "Dimensions:              (time: 16, latitude: 1056, longitude: 2880)\n",
       "Coordinates:\n",
-      "  * latitude         (latitude) float32 4kB 55.01 55.02 55.03 ... 65.98 65.99\n",
-      "  * longitude        (longitude) float32 12kB -34.99 -34.98 ... -5.016 -5.005\n",
-      "  * time             (time) datetime64[ns] 128B 2024-05-08 ... 2024-05-23\n",
-      "Data variables:\n",
-      "    BBP              (time, latitude, longitude) float32 195MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
-      "    BBP_uncertainty  (time, latitude, longitude) float64 389MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
-      "    CDM              (time, latitude, longitude) float32 195MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
-      "    CDM_uncertainty  (time, latitude, longitude) float64 389MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
-      "    flags            (time, latitude, longitude) int8 49MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
+      "  * latitude             (latitude) float32 4kB 55.01 55.02 ... 65.98 65.99\n",
+      "  * longitude            (longitude) float32 12kB -34.99 -34.98 ... -5.005\n",
+      "  * time                 (time) datetime64[ns] 128B 2024-05-08 ... 2024-05-23\n",
+      "Data variables: (12/21)\n",
+      "    CHL                  (time, latitude, longitude) float32 195MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
+      "    CHL_uncertainty      (time, latitude, longitude) float64 389MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
+      "    DIATO                (time, latitude, longitude) float32 195MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
+      "    DIATO_uncertainty    (time, latitude, longitude) float64 389MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
+      "    DINO                 (time, latitude, longitude) float32 195MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
+      "    DINO_uncertainty     (time, latitude, longitude) float64 389MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
+      "    ...                   ...\n",
+      "    PICO_uncertainty     (time, latitude, longitude) float64 389MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
+      "    PROCHLO              (time, latitude, longitude) float32 195MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
+      "    PROCHLO_uncertainty  (time, latitude, longitude) float64 389MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
+      "    PROKAR               (time, latitude, longitude) float32 195MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
+      "    PROKAR_uncertainty   (time, latitude, longitude) float64 389MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
+      "    flags                (time, latitude, longitude) int8 49MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
       "Attributes: (12/92)\n",
       "    Conventions:                     CF-1.8, ACDD-1.3\n",
       "    DPM_reference:                   GC-UD-ACRI-PUG\n",
@@ -186,34 +187,34 @@
       "    cmems_product_id:                OCEANCOLOUR_ATL_BGC_L3_NRT_009_111\n",
       "    ...                              ...\n",
       "    time_coverage_resolution:        P1D\n",
-      "    time_coverage_start:             2023-10-15T09:48:09Z\n",
-      "    title:                           cmems_obs-oc_atl_bgc-optics_nrt_l3-multi...\n",
+      "    time_coverage_start:             2023-10-15T06:57:27Z\n",
+      "    title:                           cmems_obs-oc_atl_bgc-plankton_nrt_l3-mul...\n",
       "    westernmost_longitude:           -46.0\n",
       "    westernmost_valid_longitude:     -46.0\n",
       "    copernicusmarine_version:        1.2.2\n",
-      "INFO - 2024-05-24T10:47:07Z - Estimated size of the dataset file is 928.635 MB.\n",
-      "Do you want to proceed with download? [Y/n]:INFO - 2024-05-24T10:47:10Z - Writing to local storage. Please wait...\n"
+      "INFO - 2024-05-24T19:29:54Z - Estimated size of the dataset file is 3900.267 MB.\n",
+      "Do you want to proceed with download? [Y/n]:INFO - 2024-05-24T19:29:55Z - Writing to local storage. Please wait...\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 7106/7106 [01:12<00:00, 98.46it/s] "
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8baf4c580907477d88554419017d55c7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/30402 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO - 2024-05-24T10:48:23Z - Successfully downloaded to c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\CMEMS_Iceland_Basin_BBP_April-May2024.nc\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "INFO - 2024-05-24T19:31:26Z - Successfully downloaded to c:\\Users\\flapet\\OneDrive - NOC\\Documents\\NRT_viz\\biocarbon_nrt_data_viz\\data\\satellite\\CMEMS_Iceland_Basin_CHLA_April-May2024.nc\n"
      ]
     }
    ],
@@ -271,7 +272,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
