--- a/Python_notebooks/satellite_data_download.ipynb
+++ b/Python_notebooks/satellite_data_download.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,9 +31,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'data' folder already exists in the parent directory.\n",
+      "'satellite' directory already exists inside 'data' folder.\n"
+     ]
+    }
+   ],
    "source": [
     "def create_missing_directories():\n",
     "    # Define the path to the parent directory\n",
@@ -79,11 +88,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 3,
-=======
-   "execution_count": null,
->>>>>>> 39dc2a084d83a548c5c2fe226da3a33852591a83
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,11 +110,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 4,
-=======
-   "execution_count": null,
->>>>>>> 39dc2a084d83a548c5c2fe226da3a33852591a83
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +144,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -218,11 +218,6 @@
      ]
     }
    ],
-=======
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
->>>>>>> 39dc2a084d83a548c5c2fe226da3a33852591a83
    "source": [
     "if os.path.exists(filepath):\n",
     "  response = input(\"Do you want to remove and overwrite the file \" + f\"\\\"{saved_netCDF_as}\\\"\" + \" (y/n): \").strip().lower()\n",
@@ -243,7 +238,7 @@
     "        output_filename = saved_netCDF_as,\n",
     "        output_directory = satellite_dir)\n",
     "  else:\n",
-    "        print(\"Download cancelled.\")\n",
+    "        print(\"Download canceled.\")\n",
     "else:\n",
     "  print(f\"{saved_netCDF_as} does not exist. Proceeding to download.\")\n",
     "  cpm.subset(dataset_id=dataset_to_extract,\n",
